# nix-python-example

./: .envrc  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  deploy.sh  docker-entrypoint.sh  flake.nix  package-lock.json  package.json  pyproject.toml  shell.nix
.github/workflows/: build.yml
.zed/: settings.json
infra/: .gitignore  package-lock.json
infra/lib/: infra-stack.ts
infra/test/: infra.test.ts
src/python-lambda/: __main__.py  main.py
src/python_lambda/: __main__.py  handler.py  lambda.py  main.py  plot.py
