[project]
name = "python_lambda"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["matplotlib>=3.9.2", "numpy>=2.1.3", "pandas>=2.2.3"]

[tool.uv]
dev-dependencies = ["pytest>=8.3.3"]

[tool.pytest.ini_options]
pythonpath = "src"
addopts = ["--import-mode=importlib"]
